Mention the AWS instance

--- a/docs/_source/tutorials/notebooks/training-llm-mistral-sft.ipynb
+++ b/docs/_source/tutorials/notebooks/training-llm-mistral-sft.ipynb
@@ -12,7 +12,9 @@
     "2. (Optional) Annotate instruction samples.\n",
     "3. Set up the [ArgillaTrainer](https://docs.argilla.io/en/latest/practical_guides/fine_tune.html#supervised-finetuning) for Supervised Finetuning.\n",
     "4. Perform inference using the finetuned LLM.\n",
-    "5. Publish the resulting model and dataset on the Hugging Face Hub."
+    "5. Publish the resulting model and dataset on the Hugging Face Hub.\n",
+    "\n",
+    "For this tutorial, we used the `p3.8xlarge` AWS instance and trained for a total of 70 minutes. In terms of compute, training the Mistral chat model cost us less than $15."
    ]
   },
   {
