Split up large section, add "inference published model"

--- a/docs/_source/tutorials/notebooks/training-llm-mistral-sft.ipynb
+++ b/docs/_source/tutorials/notebooks/training-llm-mistral-sft.ipynb
@@ -291,6 +291,7 @@
    "metadata": {},
    "source": [
     "## Set up the ArgillaTrainer for Supervised Finetuning\n",
+    "### Model & Tokenizer\n",
     "Next, we have to set up the [ArgillaTrainer](https://docs.argilla.io/en/latest/practical_guides/fine_tune.html#supervised-finetuning). First off, we will load the Mistral 7B `model` and `tokenizer`. We'll load the model using `float16` to improve the memory usage and efficiency, and `device_map=\"auto\"` automatically picks the best device to load the model on. For example, this will prioritize your GPU before your CPU.\n",
     "\n",
     "Furthermore, setting the `pad_token_id` to `eos_token_id` is required for open-end generation. If you don't define `pad_token_id`, it is often set to `eos_token_id` already, but you will be given warnings that you should do it yourself."
@@ -315,6 +316,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Training Task\n",
     "Next, we can set up the [`TrainingTask`](https://docs.argilla.io/en/latest/practical_guides/fine_tune.html#the-trainingtask) for supervised finetuning. This task requires a `formatting_func` that formats the data from Argilla in preparation for training. This formatting function first checks if the data quality is up to par. This is done by inspecting the annotations and checking if a sample was not annotated, annotated as \"Bad\" or discarded. For the purposes of the tutorial, I'll ignore this part and consider all data to be high quality.\n",
     "\n",
     "Then, we convert the data to our desired chat format, where each step consists of:\n",
@@ -462,6 +464,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Data Collation\n",
     "Next, we want to verify that this text is tokenized and collated correctly. In particular the data collation can be quite important, as some data collators will replace all special tokens (e.g. padding, BOS and EOS tokens) with a label of -100, which is the label that is ignored during training. If this is the case, then the model will not learn to produce the EOS token. Consequently, the model will always respond with endless tokens - far from ideal.\n",
     "\n",
     "By default, models trained with supervised finetuning use the [`DataCollatorForLanguageModeling`](https://huggingface.co/docs/transformers/main_classes/data_collator#transformers.DataCollatorForLanguageModeling) data collator, so let's experiment:"
@@ -577,6 +580,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Generation Callback\n",
+    "\n",
     "When training LLMs, it's always recommended to perform some form of generation during training. This is crucial as the loss alone is not a good indicator of model performance, and it is the primary method to gauge if the model is going in the right direction and learning like expected. For this purpose, we will create a callback that generates some text and prints it out on every evaluation."
    ]
   },
@@ -619,6 +624,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### ArgillaTrainer & hyperparameters\n",
     "Next, we can initialize the [`ArgillaTrainer`](https://docs.argilla.io/en/latest/practical_guides/fine_tune.html#the-argillatrainer)! We have already prepared all of the components that it requires."
    ]
   },
@@ -747,9 +753,9 @@
     "from peft import AutoPeftModelForCausalLM\n",
     "import torch\n",
     "\n",
-    "model_id = \"argilla/Mistral-7B-v0.1-chat-OIG\"\n",
+    "model_path = \"Mistral-7B-v0.1-chat-OIG-3k\"\n",
     "model = AutoPeftModelForCausalLM.from_pretrained(\n",
-    "    model_id,\n",
+    "    model_path,\n",
     "    torch_dtype=torch.bfloat16,\n",
     "    device_map=\"auto\",\n",
     ")\n",
@@ -842,6 +848,55 @@
    "source": [
     "dataset = rg.FeedbackDataset.from_argilla(\"oig-30k\", workspace=\"admin\")\n",
     "dataset.push_to_huggingface(\"argilla/oig-30k\", private=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Performing inference with our published model\n",
+    "If you'd like to try out the model that we trained for this tutorial, then you can run the following snippets to load the Adapter files from the Hugging Face Hub and try out your own prompts. These cells below can be ran completely separate from the remainder of the tutorial."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import AutoTokenizer\n",
+    "from peft import AutoPeftModelForCausalLM\n",
+    "import torch\n",
+    "\n",
+    "model_path = \"argilla/Mistral-7B-v0.1-chat-OIG\"\n",
+    "model = AutoPeftModelForCausalLM.from_pretrained(\n",
+    "    model_path,\n",
+    "    torch_dtype=torch.bfloat16,\n",
+    "    device_map=\"auto\",\n",
+    ")\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
+    "tokenizer.pad_token_id = tokenizer.eos_token_id"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Feel free to experiment with various different prompts here:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt = \"<human>: Finish this sequence: purple, red, orange, yellow, ... <bot>: \"\n",
+    "inputs = tokenizer(prompt, return_tensors=\"pt\").to(model.device)\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    outputs = model.generate(input_ids=inputs[\"input_ids\"], max_new_tokens=250, pad_token_id=tokenizer.pad_token_id)\n",
+    "print(tokenizer.batch_decode(outputs, skip_special_tokens=False)[0])"
    ]
   },
   {
