Link again to the published model and dataset

--- a/docs/_source/tutorials/notebooks/training-llm-mistral-sft.ipynb
+++ b/docs/_source/tutorials/notebooks/training-llm-mistral-sft.ipynb
@@ -837,7 +837,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And the dataset can be saved to the Hub like so:"
+    "This resulted in the [argilla/Mistral-7B-v0.1-chat-OIG](https://huggingface.co/argilla/Mistral-7B-v0.1-chat-OIG) on the Hub. We can save the dataset to the Hub like so:"
    ]
   },
   {
@@ -854,8 +854,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Which created the [argilla/oig-30k](https://huggingface.co/datasets/argilla/oig-30k) repository."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Performing inference with our published model\n",
-    "If you'd like to try out the model that we trained for this tutorial, then you can run the following snippets to load the Adapter files from the Hugging Face Hub and try out your own prompts. These cells below can be ran completely separate from the remainder of the tutorial."
+    "If you'd like to try out [the model that we trained for this tutorial](https://huggingface.co/argilla/Mistral-7B-v0.1-chat-OIG), then you can run the following snippets to load the Adapter files from the Hugging Face Hub and try out your own prompts. These cells below can be ran completely separate from the remainder of the tutorial."
    ]
   },
   {
