updating the tutorial

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/fine-tuning-openai-rag-feedback.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/fine-tuning-openai-rag-feedback.ipynb
@@ -70,7 +70,7 @@
       },
       "outputs": [],
       "source": [
-        "# imports\n",
+        "# Import the needed libraries\n",
         "import os\n",
         "import json\n",
         "import random\n",
@@ -81,6 +81,11 @@
         "import openai\n",
         "\n",
         "import argilla as rg\n",
+        "from argilla.feedback import TrainingTask\n",
+        "from argilla.feedback import ArgillaTrainer\n",
+        "\n",
+        "from typing import Dict, Any, Iterator\n",
+        "from typing import Union, Tuple, List\n",
         "\n",
         "from llama_index import SimpleDirectoryReader, ServiceContext, download_loader\n",
         "from llama_index.llms import OpenAI\n",
@@ -91,6 +96,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "If you are running Argilla using the Docker quickstart image or Hugging Face Spaces, you need to init the Argilla client with the URL and API_KEY:"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -98,11 +110,13 @@
       },
       "outputs": [],
       "source": [
-        "# connect to argilla quickstart instance using your URL and the default api key (literally admin.apikey)\n",
-        "# in this example we are using a hugging face deployment.\n",
+        "# Replace api_url with the url to your HF Spaces URL if using Spaces\n",
+        "# Replace api_key if you configured a custom API key\n",
+        "# Replace workspace with the name of your workspace\n",
         "rg.init(\n",
-        "    api_url=\"https://argilla-fine-tune-chat-gpt.hf.space/\",\n",
-        "    api_key=\"admin.apikey\"\n",
+        "    api_url=\"http://localhost:6900\",\n",
+        "    api_key=\"owner.apikey\",\n",
+        "    workspace=\"admin\"\n",
         ")"
       ]
     },
@@ -114,7 +128,7 @@
       },
       "outputs": [],
       "source": [
-        "# Your openai key is needed for generation and fine-tuning\n",
+        "# Your openAI key is needed for generation and fine-tuning\n",
         "os.environ['OPENAI_API_KEY'] = 'sk-...'\n",
         "openai.api_key = os.environ[\"OPENAI_API_KEY\"]"
       ]
@@ -144,7 +158,7 @@
       },
       "outputs": [],
       "source": [
-        "# read our source questions\n",
+        "# Read our source questions\n",
         "dataset = load_dataset(\"argilla/cloud_assistant_questions\")"
       ]
     },
@@ -156,27 +170,26 @@
       },
       "outputs": [],
       "source": [
-        "# read and parse document using Unstructured\n",
+        "# Read and parse the document using Unstructured\n",
         "UnstructuredReader = download_loader(\"UnstructuredReader\", refresh_cache=True)\n",
         "loader = UnstructuredReader()\n",
         "# You can download this doc from: https://huggingface.co/datasets/argilla/cloud_assistant_questions/raw/main/argilla_cloud.txt\n",
         "documents = loader.load_data(\"argilla_cloud.txt\")\n",
         "\n",
-        "# setup Llama index context\n",
+        "# Set up the Llama index context\n",
         "gpt_35_context = ServiceContext.from_defaults(\n",
         "    llm=OpenAI(model=\"gpt-3.5-turbo\", temperature=0.3)\n",
         ")\n",
         "\n",
-        "# index the document and setup the engine\n",
+        "# Index the document and set up the engine\n",
         "index = VectorStoreIndex.from_documents(documents, service_context=gpt_35_context)\n",
         "query_engine = index.as_query_engine(similarity_top_k=2)\n",
-        "\n",
         "\n",
         "contexts = []\n",
         "answers = []\n",
         "questions = dataset[\"train\"][\"question\"]\n",
         "\n",
-        "# inference over the questions\n",
+        "# Inference over the questions\n",
         "for question in tqdm(questions):\n",
         "    response = query_engine.query(question)\n",
         "    contexts.append([x.node.get_content() for x in response.source_nodes])\n",
@@ -285,7 +298,7 @@
         "dataset = dataset.push_to_argilla(name=\"customer_assistant\", workspace=\"admin\")\n",
         "dataset.add_records(records)\n",
         "\n",
-        "# optional: store and version dataset in the Hub\n",
+        "# Optional: store and version dataset in the Hub\n",
         "#dataset = dataset.push_to_huggingface(\"argilla/rg_customer_assistant\")"
       ]
     },
@@ -317,13 +330,22 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "X96nqzu6Q6fi"
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
-        "# If you have skipped the previous step run this to get the pre-built dataset\n",
-        "# dataset = rg.FeedbackDataset.from_argilla(\"customer_assistant\", workspace=\"admin\")"
+        "# Read the dataset from Argilla\n",
+        "dataset = rg.FeedbackDataset.from_argilla(\"customer_assistant\", workspace=\"admin\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "If you have skipped the previous steps run this to get the pre-built dataset.\n",
+        "\n",
+        "```python\n",
+        "dataset = rg.FeedbackDataset.from_huggingface(\"argilla/customer_assistant\")\n",
+        "```"
       ]
     },
     {
@@ -334,7 +356,7 @@
       },
       "outputs": [],
       "source": [
-        "# adaptation from LlamaIndex's TEXT_QA_PROMPT_TMPL_MSGS[1].content\n",
+        "# Adaptation from LlamaIndex's TEXT_QA_PROMPT_TMPL_MSGS[1].content\n",
         "user_message_prompt =\"\"\"Context information is below.\n",
         "---------------------\n",
         "{context_str}\n",
@@ -343,7 +365,7 @@
         "Query: {query_str}\n",
         "Answer:\n",
         "\"\"\"\n",
-        "# adaptation from LlamaIndex's TEXT_QA_SYSTEM_PROMPT\n",
+        "# Adaptation from LlamaIndex's TEXT_QA_SYSTEM_PROMPT\n",
         "system_prompt = \"\"\"You are an expert customer service assistant for the Argilla Cloud product that is trusted around the world.\n",
         "Always answer the query using the provided context information, and not prior knowledge.\n",
         "Some rules to follow:\n",
@@ -360,27 +382,18 @@
       },
       "outputs": [],
       "source": [
-        "training_examples = []\n",
+        "def formatting_func(sample: dict) -> Union[Tuple[str, str, str, str], List[Tuple[str, str, str, str]]]:\n",
+        "    from uuid import uuid4\n",
+        "    if sample[\"response\"]:\n",
+        "        chat = str(uuid4())\n",
+        "        user_message = user_message_prompt.format(context_str=sample[\"context\"], query_str=sample[\"user-message\"])\n",
+        "        return [\n",
+        "            (chat, \"0\", \"system\", system_prompt),\n",
+        "            (chat, \"1\", \"user\", user_message),\n",
+        "            (chat, \"2\", \"assistant\", sample[\"response\"][0][\"value\"])\n",
+        "        ]\n",
         "\n",
-        "for record in dataset.records:\n",
-        "  responses = [response for response in record.responses if response.status == \"submitted\"]\n",
-        "  if len(responses) > 0:\n",
-        "    user_message = user_message_prompt.format(context_str=record.fields[\"context\"], query_str=record.fields[\"user-message\"])\n",
-        "    example = [\n",
-        "        {\"role\": \"system\", \"content\": system_prompt},\n",
-        "        {\"role\": \"user\", \"content\": user_message},\n",
-        "        {\"role\": \"assistant\", \"content\": responses[0].values[\"response\"].value.strip()},\n",
-        "    ]\n",
-        "    training_examples.append({\"messages\": example})\n",
-        "\n",
-        "output_file_path = 'fine-tuning-data.jsonl'\n",
-        "\n",
-        "data = training_examples\n",
-        "\n",
-        "with open(output_file_path, 'w') as f:\n",
-        "  for sublist in data:\n",
-        "    json.dump(sublist, f)\n",
-        "    f.write('\\n')"
+        "task = TrainingTask.for_chat_completion(formatting_func=formatting_func)"
       ]
     },
     {
@@ -393,7 +406,7 @@
         "## Fine-tune GPT3.5 with high-quality feedback\n",
         "\n",
         "\n",
-        "We fine-tune `gpt-3.5-turbo` with the exported dataset."
+        "We fine-tune `gpt-3.5-turbo` with the exported dataset using the Argilla Trainer."
       ]
     },
     {
@@ -404,36 +417,12 @@
       },
       "outputs": [],
       "source": [
-        "openai.api_key = os.getenv(\"OPENAI_API_KEY\")\n",
-        "\n",
-        "# comes from https://github.com/jerryjliu/llama_index/blob/main/experimental/openai_fine_tuning/launch_training.py\n",
-        "def launch_training(data_path: str) -> None:\n",
-        "    file_name = os.path.basename(data_path)\n",
-        "\n",
-        "    # upload file\n",
-        "    with open(data_path, \"rb\") as f:\n",
-        "        output = openai.File.create(\n",
-        "            file=f,\n",
-        "            purpose=\"fine-tune\",\n",
-        "            user_provided_filename=file_name,\n",
-        "        )\n",
-        "    print(\"File uploaded...\")\n",
-        "\n",
-        "    # launch training\n",
-        "    while True:\n",
-        "        try:\n",
-        "            openai.FineTuningJob.create(\n",
-        "                training_file=output[\"id\"], model=\"gpt-3.5-turbo\"\n",
-        "            )\n",
-        "            break\n",
-        "        except openai.error.InvalidRequestError:\n",
-        "            print(\"Waiting for file to be ready...\")\n",
-        "            time.sleep(60)\n",
-        "    print(\n",
-        "        f\"Training job {output['id']} launched. You will be emailed when it's complete.\"\n",
-        "    )\n",
-        "\n",
-        "launch_training(\"/content/fine-tuning-data.jsonl\")"
+        "trainer = ArgillaTrainer(\n",
+        "    dataset=dataset,\n",
+        "    task=task,\n",
+        "    framework=\"openai\",\n",
+        ")\n",
+        "trainer.train(output_dir=\"my-ft-openai-model\")"
       ]
     },
     {
@@ -482,7 +471,7 @@
       },
       "outputs": [],
       "source": [
-        "# read our test questions\n",
+        "# Read our test questions\n",
         "questions = load_dataset(\"argilla/cloud_assistant_questions\", split=\"test\")[\"question\"]"
       ]
     },
@@ -497,7 +486,7 @@
       },
       "outputs": [],
       "source": [
-        "# generate responses with base model\n",
+        "# Generate responses with base model\n",
         "index = VectorStoreIndex.from_documents(documents, service_context=gpt_35_context)\n",
         "query_engine = index.as_query_engine(similarity_top_k=2)\n",
         "\n",
@@ -517,7 +506,7 @@
       },
       "outputs": [],
       "source": [
-        "# generate responses with ft model: replace with the id of your ft model\n",
+        "# Generate responses with ft model: replace with the id of your ft model\n",
         "ft_context = ServiceContext.from_defaults(\n",
         "    llm=OpenAI(model=\"ft:gpt-3.5-turbo-...\", temperature=0.3)\n",
         ")\n",
@@ -556,7 +545,7 @@
       "source": [
         "records = []\n",
         "for base, ft, question in zip(base_model_responses, ft_model_responses, questions):\n",
-        "  # randomizing the position is a highly important step to mitigate labeler biases\n",
+        "  # Randomizing the position is a highly important step to mitigate labeler biases\n",
         "  # Shuffle the order of base and ft\n",
         "  response_a, response_b = random.sample([base, ft], 2)\n",
         "\n",
@@ -618,7 +607,7 @@
       },
       "outputs": [],
       "source": [
-        "# retrieve the dataset from Argilla\n",
+        "# Retrieve the dataset from Argilla\n",
         "dataset = rg.FeedbackDataset.from_argilla(name=\"finetuned-vs-base-preference\", workspace=\"admin\")\n",
         "\n",
         "win_rates = {\n",
@@ -627,7 +616,7 @@
         "  'tie': 0\n",
         "}\n",
         "\n",
-        "# compute the win and tie rates\n",
+        "# Compute the win and tie rates\n",
         "for record in dataset.records:\n",
         "  if len(record.responses) > 0:\n",
         "    for response in record.responses:\n",
@@ -652,7 +641,7 @@
       },
       "outputs": [],
       "source": [
-        "# let's make the labels more explicit\n",
+        "# Let's make the labels more explicit\n",
         "data = {'gpt3.5-fine-tuned': 17, 'gpt3.5-base': 6, 'tie': 5}\n",
         "total = sum(data.values())\n",
         "\n",
@@ -711,7 +700,6 @@
         "# You can download this doc from: https://huggingface.co/datasets/argilla/cloud_assistant_questions/raw/main/argilla_cloud.txt\n",
         "documents = loader.load_data(\"argilla_cloud.txt\")\n",
         "\n",
-        "\n",
         "gpt_35_context = ServiceContext.from_defaults(\n",
         "    llm=OpenAI(model=\"gpt-3.5-turbo\", temperature=0.4),\n",
         "    chunk_size=60\n",
@@ -762,7 +750,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.6"
+      "version": "3.10.13"
     }
   },
   "nbformat": 4,
