Move tutorial around, try to embed it in the docs correctly

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/training-llm-mistral-sft.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/training-llm-mistral-sft.ipynb
@@ -275,7 +275,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![training-llm-mistral-sft](../../_static/tutorials/training-llm-mistral-sft/training-llm-mistral-sft.png)"
+    "![training-llm-mistral-sft](../../../_static/images/llms/training-llm-mistral-sft/training-llm-mistral-sft.png)"
    ]
   },
   {
