Link to elsewhere in docs in the data annotation part

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/training-llm-mistral-sft.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/training-llm-mistral-sft.ipynb
@@ -283,7 +283,7 @@
    "metadata": {},
    "source": [
     "## (Optional) Annotate instruction samples\n",
-    "If you are using your own proprietary data, data from an unreliable source, or require on your annotators to provide responses, then you must perform data annotation. However, for the purposes of this tutorial, we will assume that all data is high quality and skip this step."
+    "If you are using your own proprietary data, data from an unreliable source, or require on your annotators to provide responses, then you must perform data annotation. However, for the purposes of this tutorial, we will assume that all data is high quality and skip this step. See the [data collection for LLMs](https://docs.argilla.io/en/latest/conceptual_guides/llm/llm.html) documentation for additional information on this phase."
    ]
   },
   {
