--- a/docs/_source/tutorials_and_integrations/integrations/monitor_endpoints with_fastapi.ipynb
+++ b/docs/_source/tutorials_and_integrations/integrations/monitor_endpoints with_fastapi.ipynb
@@ -7,7 +7,7 @@
     "id": "BbsELFGS7tQS"
    },
    "source": [
-    "# Monitor NLP models with FastAPI and ArgillaLogHTTPMiddleware\n",
+    "# `FastAPI`: Monitor NLP models with ArgillaLogHTTPMiddleware\n",
     "\n",
     "In this tutorial, you'll learn to monitor the predictions of a FastAPI inference endpoint\n",
     "and log model predictions in a Argilla dataset. It will walk you through 4 basic MLOps Steps:\n",
